src/lib/generic/GenericSqlParser.ts
// Generated from dt-sql-parser/src/grammar/generic/GenericSql.g4 by ANTLR 4.13.1

// @ts-nocheck

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { GenericSqlListener } from "./GenericSqlListener.js";
import { GenericSqlVisitor } from "./GenericSqlVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


import { SQLParserBase } from '../SQLParserBase';


export class GenericSqlParser extends SQLParserBase {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly KW_ADD = 5;
    public static readonly KW_ALL = 6;
    public static readonly KW_ALTER = 7;
    public static readonly KW_AND = 8;
    public static readonly KW_AS = 9;
    public static readonly KW_ASC = 10;
    public static readonly KW_BETWEEN = 11;
    public static readonly KW_BIGINT = 12;
    public static readonly KW_BINARY = 13;
    public static readonly KW_BOOLEAN = 14;
    public static readonly KW_BY = 15;
    public static readonly KW_CASE = 16;
    public static readonly KW_CAST = 17;
    public static readonly KW_CHAR = 18;
    public static readonly KW_CHECK = 19;
    public static readonly KW_COALESCE = 20;
    public static readonly KW_COLUMN = 21;
    public static readonly KW_CONSTRAINT = 22;
    public static readonly KW_CREATE = 23;
    public static readonly KW_CROSS = 24;
    public static readonly KW_DATE = 25;
    public static readonly KW_DECIMAL = 26;
    public static readonly KW_DEFAULT = 27;
    public static readonly KW_DELETE = 28;
    public static readonly KW_DESC = 29;
    public static readonly KW_DISTINCT = 30;
    public static readonly KW_DOUBLE = 31;
    public static readonly KW_DROP = 32;
    public static readonly KW_ELSE = 33;
    public static readonly KW_END = 34;
    public static readonly KW_ESCAPE = 35;
    public static readonly KW_EXCEPT = 36;
    public static readonly KW_EXISTS = 37;
    public static readonly KW_FALSE = 38;
    public static readonly KW_FIRST = 39;
    public static readonly KW_FLOAT = 40;
    public static readonly KW_FOREIGN = 41;
    public static readonly KW_FROM = 42;
    public static readonly KW_FULL = 43;
    public static readonly KW_GROUP = 44;
    public static readonly KW_HAVING = 45;
    public static readonly KW_IF = 46;
    public static readonly KW_IN = 47;
    public static readonly KW_INNER = 48;
    public static readonly KW_INSERT = 49;
    public static readonly KW_INT = 50;
    public static readonly KW_INTEGER = 51;
    public static readonly KW_INTERSECT = 52;
    public static readonly KW_INTO = 53;
    public static readonly KW_IS = 54;
    public static readonly KW_JOIN = 55;
    public static readonly KW_KEY = 56;
    public static readonly KW_LAST = 57;
    public static readonly KW_LEFT = 58;
    public static readonly KW_LIKE = 59;
    public static readonly KW_LIMIT = 60;
    public static readonly KW_NOT = 61;
    public static readonly KW_NULL = 62;
    public static readonly KW_NULLIF = 63;
    public static readonly KW_NULLS = 64;
    public static readonly KW_NUMERIC = 65;
    public static readonly KW_OFFSET = 66;
    public static readonly KW_ON = 67;
    public static readonly KW_OR = 68;
    public static readonly KW_ORDER = 69;
    public static readonly KW_OUTER = 70;
    public static readonly KW_PRIMARY = 71;
    public static readonly KW_RECURSIVE = 72;
    public static readonly KW_REFERENCES = 73;
    public static readonly KW_RENAME = 74;
    public static readonly KW_RIGHT = 75;
    public static readonly KW_SELECT = 76;
    public static readonly KW_SET = 77;
    public static readonly KW_SMALLINT = 78;
    public static readonly KW_TABLE = 79;
    public static readonly KW_TEXT = 80;
    public static readonly KW_THEN = 81;
    public static readonly KW_TIME = 82;
    public static readonly KW_TIMESTAMP = 83;
    public static readonly KW_TINYINT = 84;
    public static readonly KW_TO = 85;
    public static readonly KW_TRUE = 86;
    public static readonly KW_UNION = 87;
    public static readonly KW_UNIQUE = 88;
    public static readonly KW_UPDATE = 89;
    public static readonly KW_VARCHAR = 90;
    public static readonly KW_VARBINARY = 91;
    public static readonly KW_WHEN = 92;
    public static readonly KW_WHERE = 93;
    public static readonly KW_WITH = 94;
    public static readonly EQ = 95;
    public static readonly NEQ = 96;
    public static readonly LT = 97;
    public static readonly LTE = 98;
    public static readonly GT = 99;
    public static readonly GTE = 100;
    public static readonly PLUS = 101;
    public static readonly MINUS = 102;
    public static readonly ASTERISK = 103;
    public static readonly SLASH = 104;
    public static readonly PERCENT = 105;
    public static readonly CONCAT = 106;
    public static readonly QUESTION_MARK = 107;
    public static readonly SEMICOLON = 108;
    public static readonly STRING = 109;
    public static readonly BINARY_LITERAL = 110;
    public static readonly INTEGER_VALUE = 111;
    public static readonly DECIMAL_VALUE = 112;
    public static readonly DOUBLE_VALUE = 113;
    public static readonly IDENTIFIER = 114;
    public static readonly DIGIT_IDENTIFIER = 115;
    public static readonly QUOTED_IDENTIFIER = 116;
    public static readonly BACKQUOTED_IDENTIFIER = 117;
    public static readonly LINE_COMMENT = 118;
    public static readonly BRACKETED_COMMENT = 119;
    public static readonly WHITE_SPACE = 120;
    public static readonly UNRECOGNIZED = 121;
    public static readonly DELIMITER = 122;
    public static readonly RULE_program = 0;
    public static readonly RULE_statements = 1;
    public static readonly RULE_singleStatement = 2;
    public static readonly RULE_statement = 3;
    public static readonly RULE_queryStatement = 4;
    public static readonly RULE_withClause = 5;
    public static readonly RULE_namedQuery = 6;
    public static readonly RULE_queryNoWith = 7;
    public static readonly RULE_queryTerm = 8;
    public static readonly RULE_queryPrimary = 9;
    public static readonly RULE_querySpecification = 10;
    public static readonly RULE_setQuantifier = 11;
    public static readonly RULE_selectItem = 12;
    public static readonly RULE_fromClause = 13;
    public static readonly RULE_relation = 14;
    public static readonly RULE_joinType = 15;
    public static readonly RULE_aliasedRelation = 16;
    public static readonly RULE_relationPrimary = 17;
    public static readonly RULE_whereClause = 18;
    public static readonly RULE_groupByClause = 19;
    public static readonly RULE_havingClause = 20;
    public static readonly RULE_orderByClause = 21;
    public static readonly RULE_sortItem = 22;
    public static readonly RULE_limitClause = 23;
    public static readonly RULE_insertStatement = 24;
    public static readonly RULE_columnList = 25;
    public static readonly RULE_updateStatement = 26;
    public static readonly RULE_updateAssignment = 27;
    public static readonly RULE_deleteStatement = 28;
    public static readonly RULE_createTableStatement = 29;
    public static readonly RULE_tableElement = 30;
    public static readonly RULE_columnDefinition = 31;
    public static readonly RULE_tableConstraint = 32;
    public static readonly RULE_alterTableStatement = 33;
    public static readonly RULE_dropTableStatement = 34;
    public static readonly RULE_expression = 35;
    public static readonly RULE_booleanExpression = 36;
    public static readonly RULE_predicatedExpression = 37;
    public static readonly RULE_predicate = 38;
    public static readonly RULE_comparisonOperator = 39;
    public static readonly RULE_valueExpression = 40;
    public static readonly RULE_primaryExpression = 41;
    public static readonly RULE_whenClause = 42;
    public static readonly RULE_subqueryExpression = 43;
    public static readonly RULE_dataType = 44;
    public static readonly RULE_properties = 45;
    public static readonly RULE_property = 46;
    public static readonly RULE_literal = 47;
    public static readonly RULE_identifier = 48;
    public static readonly RULE_qualifiedName = 49;
    public static readonly RULE_columnRef = 50;
    public static readonly RULE_tableName = 51;
    public static readonly RULE_tableNameCreate = 52;
    public static readonly RULE_nonReserved = 53;

    public static readonly literalNames = [
        null, "','", "'('", "')'", "'.'", "'ADD'", "'ALL'", "'ALTER'", "'AND'", 
        "'AS'", "'ASC'", "'BETWEEN'", "'BIGINT'", "'BINARY'", "'BOOLEAN'", 
        "'BY'", "'CASE'", "'CAST'", "'CHAR'", "'CHECK'", "'COALESCE'", "'COLUMN'", 
        "'CONSTRAINT'", "'CREATE'", "'CROSS'", "'DATE'", "'DECIMAL'", "'DEFAULT'", 
        "'DELETE'", "'DESC'", "'DISTINCT'", "'DOUBLE'", "'DROP'", "'ELSE'", 
        "'END'", "'ESCAPE'", "'EXCEPT'", "'EXISTS'", "'FALSE'", "'FIRST'", 
        "'FLOAT'", "'FOREIGN'", "'FROM'", "'FULL'", "'GROUP'", "'HAVING'", 
        "'IF'", "'IN'", "'INNER'", "'INSERT'", "'INT'", "'INTEGER'", "'INTERSECT'", 
        "'INTO'", "'IS'", "'JOIN'", "'KEY'", "'LAST'", "'LEFT'", "'LIKE'", 
        "'LIMIT'", "'NOT'", "'NULL'", "'NULLIF'", "'NULLS'", "'NUMERIC'", 
        "'OFFSET'", "'ON'", "'OR'", "'ORDER'", "'OUTER'", "'PRIMARY'", "'RECURSIVE'", 
        "'REFERENCES'", "'RENAME'", "'RIGHT'", "'SELECT'", "'SET'", "'SMALLINT'", 
        "'TABLE'", "'TEXT'", "'THEN'", "'TIME'", "'TIMESTAMP'", "'TINYINT'", 
        "'TO'", "'TRUE'", "'UNION'", "'UNIQUE'", "'UPDATE'", "'VARCHAR'", 
        "'VARBINARY'", "'WHEN'", "'WHERE'", "'WITH'", "'='", null, "'<'", 
        "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'||'", 
        "'?'", "';'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, "KW_ADD", "KW_ALL", "KW_ALTER", "KW_AND", 
        "KW_AS", "KW_ASC", "KW_BETWEEN", "KW_BIGINT", "KW_BINARY", "KW_BOOLEAN", 
        "KW_BY", "KW_CASE", "KW_CAST", "KW_CHAR", "KW_CHECK", "KW_COALESCE", 
        "KW_COLUMN", "KW_CONSTRAINT", "KW_CREATE", "KW_CROSS", "KW_DATE", 
        "KW_DECIMAL", "KW_DEFAULT", "KW_DELETE", "KW_DESC", "KW_DISTINCT", 
        "KW_DOUBLE", "KW_DROP", "KW_ELSE", "KW_END", "KW_ESCAPE", "KW_EXCEPT", 
        "KW_EXISTS", "KW_FALSE", "KW_FIRST", "KW_FLOAT", "KW_FOREIGN", "KW_FROM", 
        "KW_FULL", "KW_GROUP", "KW_HAVING", "KW_IF", "KW_IN", "KW_INNER", 
        "KW_INSERT", "KW_INT", "KW_INTEGER", "KW_INTERSECT", "KW_INTO", 
        "KW_IS", "KW_JOIN", "KW_KEY", "KW_LAST", "KW_LEFT", "KW_LIKE", "KW_LIMIT", 
        "KW_NOT", "KW_NULL", "KW_NULLIF", "KW_NULLS", "KW_NUMERIC", "KW_OFFSET", 
        "KW_ON", "KW_OR", "KW_ORDER", "KW_OUTER", "KW_PRIMARY", "KW_RECURSIVE", 
        "KW_REFERENCES", "KW_RENAME", "KW_RIGHT", "KW_SELECT", "KW_SET", 
        "KW_SMALLINT", "KW_TABLE", "KW_TEXT", "KW_THEN", "KW_TIME", "KW_TIMESTAMP", 
        "KW_TINYINT", "KW_TO", "KW_TRUE", "KW_UNION", "KW_UNIQUE", "KW_UPDATE", 
        "KW_VARCHAR", "KW_VARBINARY", "KW_WHEN", "KW_WHERE", "KW_WITH", 
        "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "ASTERISK", 
        "SLASH", "PERCENT", "CONCAT", "QUESTION_MARK", "SEMICOLON", "STRING", 
        "BINARY_LITERAL", "INTEGER_VALUE", "DECIMAL_VALUE", "DOUBLE_VALUE", 
        "IDENTIFIER", "DIGIT_IDENTIFIER", "QUOTED_IDENTIFIER", "BACKQUOTED_IDENTIFIER", 
        "LINE_COMMENT", "BRACKETED_COMMENT", "WHITE_SPACE", "UNRECOGNIZED", 
        "DELIMITER"
    ];
    public static readonly ruleNames = [
        "program", "statements", "singleStatement", "statement", "queryStatement", 
        "withClause", "namedQuery", "queryNoWith", "queryTerm", "queryPrimary", 
        "querySpecification", "setQuantifier", "selectItem", "fromClause", 
        "relation", "joinType", "aliasedRelation", "relationPrimary", "whereClause", 
        "groupByClause", "havingClause", "orderByClause", "sortItem", "limitClause", 
        "insertStatement", "columnList", "updateStatement", "updateAssignment", 
        "deleteStatement", "createTableStatement", "tableElement", "columnDefinition", 
        "tableConstraint", "alterTableStatement", "dropTableStatement", 
        "expression", "booleanExpression", "predicatedExpression", "predicate", 
        "comparisonOperator", "valueExpression", "primaryExpression", "whenClause", 
        "subqueryExpression", "dataType", "properties", "property", "literal", 
        "identifier", "qualifiedName", "columnRef", "tableName", "tableNameCreate", 
        "nonReserved",
    ];

    public get grammarFileName(): string { return "GenericSql.g4"; }
    public get literalNames(): (string | null)[] { return GenericSqlParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return GenericSqlParser.symbolicNames; }
    public get ruleNames(): string[] { return GenericSqlParser.ruleNames; }
    public get serializedATN(): number[] { return GenericSqlParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, GenericSqlParser._ATN, GenericSqlParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, GenericSqlParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 111;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 276824196) !== 0) || _la === 32 || _la === 49 || ((((_la - 76)) & ~0x1F) === 0 && ((1 << (_la - 76)) & 270337) !== 0)) {
                {
                {
                this.state = 108;
                this.statements();
                }
                }
                this.state = 113;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 114;
            this.match(GenericSqlParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statements(): StatementsContext {
        let localContext = new StatementsContext(this.context, this.state);
        this.enterRule(localContext, 2, GenericSqlParser.RULE_statements);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 116;
            this.singleStatement();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public singleStatement(): SingleStatementContext {
        let localContext = new SingleStatementContext(this.context, this.state);
        this.enterRule(localContext, 4, GenericSqlParser.RULE_singleStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 118;
            this.statement();
            this.state = 120;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 108) {
                {
                this.state = 119;
                this.match(GenericSqlParser.SEMICOLON);
                }
            }
